--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
           <div class="ms-md-auto d-flex align-items-center">
             <div class="input-group input-group-outline">
               
-              <div class="dropdown">
-                <select id="dropdownMenuButton" class="btn bg-gradient-primary dropdown-toggl" name="select">
+              <div class="dropdown" name="my-form">
+                <select name= "ciudades" id="dropdownMenuButton" class="btn bg-gradient-primary dropdown-toggl" name="select">
                   <option value="" selected disabled hidden>Seleccione una ciudad</option>
                   <option class="dropdown-item" value="guayaquil">Guayaquil</option>
+                  <option class="dropdown-item" value="Ambato">Ambato</option>
+                  <option class="dropdown-item" value="Tena">Tena</option>
                   
                 </select>
               </div>
@@ -156,7 +158,92 @@
             </div>
             <div class="card-body p-3 pb-0">
               <ul class="list-group">
-                <!-- template_forecast -->
+
+                <!--MAÑANA-->
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg d-none lista">
+                  <div class="d-flex flex-column">
+                    <h6 class="mb-1 text-dark font-weight-bold text-sm day_cl">Mañana</h6>
+                    <span class="text-xs date_cl">Febrero, 12, 2023</span>
+                  </div>
+                  <div class="d-flex align-items-center ">
+                    <span class="font-weight-bold text-dark mx-2 max-temp">31 ℃</span> |  <span class="text-dark mx-2 min-temp">24 ℃</span>
+                    <div class="ms-4"><i class="material-icons fs-2 me-1 rainy ic">water_drop</i></div>
+                  </div>
+                </li>
+
+                <!--2ND-->
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg d-none lista">
+                  <div class="d-flex flex-column">
+                    <h6 class="mb-1 text-dark font-weight-bold text-sm day_cl">Mañana</h6>
+                    <span class="text-xs date_cl">Febrero, 12, 2023</span>
+                  </div>
+                  <div class="d-flex align-items-center ">
+                    <span class="font-weight-bold text-dark mx-2 max-temp">31 ℃</span> |  <span class="text-dark mx-2 min-temp">24 ℃</span>
+                    <div class="ms-4"><i class="material-icons fs-2 me-1 rainy ic">water_drop</i></div>
+                  </div>
+                </li>
+
+                <!--3RD-->
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg d-none lista">
+                  <div class="d-flex flex-column">
+                    <h6 class="mb-1 text-dark font-weight-bold text-sm day_cl">Mañana</h6>
+                    <span class="text-xs date_cl">Febrero, 12, 2023</span>
+                  </div>
+                  <div class="d-flex align-items-center ">
+                    <span class="font-weight-bold text-dark mx-2 max-temp">31 ℃</span> |  <span class="text-dark mx-2 min-temp">24 ℃</span>
+                    <div class="ms-4"><i class="material-icons fs-2 me-1 rainy ic">water_drop</i></div>
+                  </div>
+                </li>
+
+                <!--4TH-->  
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg d-none lista">
+                  <div class="d-flex flex-column">
+                    <h6 class="mb-1 text-dark font-weight-bold text-sm day_cl">Mañana</h6>
+                    <span class="text-xs date_cl">Febrero, 12, 2023</span>
+                  </div>
+                  <div class="d-flex align-items-center ">
+                    <span class="font-weight-bold text-dark mx-2 max-temp">31 ℃</span> |  <span class="text-dark mx-2 min-temp">24 ℃</span>
+                    <div class="ms-4"><i class="material-icons fs-2 me-1 rainy ic">water_drop</i></div>
+                  </div>  
+                </li>
+
+                <!--5TH-->  
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg d-none lista">
+                  <div class="d-flex flex-column">
+                    <h6 class="mb-1 text-dark font-weight-bold text-sm day_cl">Mañana</h6>
+                    <span class="text-xs date_cl">Febrero, 12, 2023</span>
+                  </div>
+                  <div class="d-flex align-items-center ">
+                    <span class="font-weight-bold text-dark mx-2 max-temp">31 ℃</span> |  <span class="text-dark mx-2 min-temp">24 ℃</span>
+                    <div class="ms-4"><i class="material-icons fs-2 me-1 rainy ic">water_drop</i></div>
+                  </div>  
+                </li>
+
+                <!--6TH-->  
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg d-none lista">
+                  <div class="d-flex flex-column">
+                    <h6 class="mb-1 text-dark font-weight-bold text-sm day_cl">Mañana</h6>
+                    <span class="text-xs date_cl">Febrero, 12, 2023</span>
+                  </div>
+                  <div class="d-flex align-items-center ">
+                    <span class="font-weight-bold text-dark mx-2 max-temp">31 ℃</span> |  <span class="text-dark mx-2 min-temp">24 ℃</span>
+                    <div class="ms-4"><i class="material-icons fs-2 me-1 rainy ic">water_drop</i></div>
+                  </div>  
+                </li>
+
+                <!--7TH-->  
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg d-none lista">
+                  <div class="d-flex flex-column">
+                    <h6 class="mb-1 text-dark font-weight-bold text-sm day_cl">Mañana</h6>
+                    <span class="text-xs date_cl">Febrero, 12, 2023</span>
+                  </div>
+                  <div class="d-flex align-items-center ">
+                    <span class="font-weight-bold text-dark mx-2 max-temp">31 ℃</span> |  <span class="text-dark mx-2 min-temp">24 ℃</span>
+                    <div class="ms-4"><i class="material-icons fs-2 me-1 rainy ic">water_drop</i></div>
+                  </div>  
+                </li>
+
+
               </ul>
             </div>
           </div>
