--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <div class="dropdown" name="my-form">
                 <select name= "ciudades" id="dropdownMenuButton" class="btn bg-gradient-primary dropdown-toggl" name="select">
                   <option value="" selected disabled hidden>Seleccione una ciudad</option>
-                  <option class="dropdown-item" value="guayaquil">Guayaquil</option>
+                  <option class="dropdown-item" value="Guayaquil">Guayaquil</option>
                   <option class="dropdown-item" value="Ambato">Ambato</option>
                   <option class="dropdown-item" value="Tena">Tena</option>
                   
